Add NodeBots New Zealand to the links and leaflet map

--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@ introTitle: Robots powered by JavaScript
     <a href="http://encontros.matehackers.org/pt/projects/21-nodebotsday-porto-alegre">NodeBotsDay Porto Alegre</a> - Brazil
   </li>
   <li>
+    <a href="http://www.nodebots.co.nz">NodeBots NZ</a> - New Zealand
+  </li>
+  <li>
     or <a href="#join">start your own!</a>
   </li>
 </ul>
@@ -204,7 +207,9 @@ introTitle: Robots powered by JavaScript
     {coords:[-34.5992296, -58.3695231], name: "NodeBots Buenos Aires", url:"http://nodebots.github.io/buenosaires/"},
     {coords:[-30.1088701, -51.1769046], name: "NodeBotsDay Porto Alegre", url:"http://encontros.matehackers.org/pt/projects/21-nodebotsday-porto-alegre"},
     {coords:[-33.4425368, -70.62611879999997], name: "NodeBots Santiago", url:"https://welcu.com/noderscl/nodebotsinternationaldaychile"},
-    {coords:[11.2239691, -74.186581], name: "NodeBots UniMagdalena", url:"http://nodeschool.io/santamarta"}  
+    {coords:[11.2239691, -74.186581], name: "NodeBots UniMagdalena", url:"http://nodeschool.io/santamarta"},
+    {coords:[-41.2910392, 174.7749513], name: "NodeBots New Zealand", url:"http://www.nodebots.co.nz"}
+
   ]
 
   meetups.map(function (m) {
