Adding NodeBots Vegas

--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@ introTitle: Robots powered by JavaScript
     <a href="http://www.nodebots.co.nz">NodeBots NZ</a> - New Zealand
   </li>
   <li>
+    <a href="http://nodebots.vegas">NodeBots Vegas</a> - USA
+  </li>
+  <li>
     or <a href="#join">start your own!</a>
   </li>
 </ul>
