--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 title: NodeBots - The Rise of JS Robotics
-introTitle: Robots powered by JavaScript
+introTitle: Learn how to make robots powered by JavaScript
 ---
 <p>
   That's right... if you've any JavaScript experience, you can now use your powers to manipulate the machines.
@@ -14,17 +14,27 @@ introTitle: Robots powered by JavaScript
   <img src="img/equation.png" alt="JS + Hardware = NodeBots"/>
 </p>
 
-<p>There are regular NodeBots events around the world where people meet-up and hack together on Arduinos, Raspberry Pis, NodeCopters, robots, and any other gizmos that just need more input...</p>
-<p>If you have no idea how to use an LED, have no fear - <a href="/core.html">NodeBot experts</a> will be on hand to help you hack, solder, and 3D print your way to a full fledged NodeBot.</p>
-<p>At the end of the day we'll have a <a href="/sumo.html">Sumo Competition</a> interlaced with project demos from anyone who wants to present.</p>
+<p>There are regular NodeBots events around the world where people meet-up to learn and hack together on Arduinos, Tessels, Edison's, Raspberry Pis, NodeCopters, robots, and any other gizmos that just need more input...</p>
+
+<p>If you have no idea how to use an LED, have no fear NodeBot experts will be on hand to help you hack, solder, and 3D print your way to a full fledged NodeBot.</p>
+<p>All you need is some basic javascript knowledge and desire to learn.</p>
+
 
 <h2 id="events">International NodeBots Day</h2>
-<p><strong>July 2016</strong> - <a href="https://github.com/nodebots/nodebotsday">NodeBots Day is back for 2016.</a>
-  <br/>We'll join together across the world to create and learn.</p>
-<p>NodeBots Day is not a hackathon. There will be no prizes other than the satisfaction of making something awesome! There will be very little in the way of talks. We're going to get together, collaborate and hack. The focus of NodeBots Day is on sharing and enjoying each other's company. And JavaScript. Lots of JavaScript.</p>
+<p>This year's event is on <strong>July 30th 2016</strong> <a href="https://github.com/nodebots/nodebotsday">Join us at an event near you!</a></p>
+<p>Each year our community around the world gather on a single day to learn and make together. We call this NodeBots Day!</p>
+
+<p>NodeBots Day is not a hackathon. There will be no prizes other than the satisfaction of making something awesome! Each event has experts on hand to help you build your project and start you on the path to building awesome devices. Overall we're going to get together, collaborate and hack. The focus of NodeBots Day is on sharing and enjoying each other's company and JavaScript. Lots of JavaScript.</p>
+
+<p>
+  <a href="https://github.com/nodebots/nodebotsday">Find out more about joining us NodeBots Day as a member or a leader on our Github Page.</a>
+</p>
+
 <p>Follow <a href="https://twitter.com/nodebotsday">@nodebotsday</a>, check the <a href="https://github.com/nodebots/nodebotsday">github</a>, or contact the <a href="/core.html">NodeBots team</a> for more info.</p>
 
 <h2>Find a meetup near you</h2>
+
+Most meetups hold monthly events. Check their pages for details.
 
 </div> <!-- close .content, so make can use full width -->
 <div class="map" id="map"></div>
@@ -81,9 +91,9 @@ introTitle: Robots powered by JavaScript
   </li>
 </ul>
 
-  <h3>Incoming Events</h3>
+  <h3>Upcoming Events</h3>
   <ul>
-    <li>Nodebots Day! July 2016!</li>
+    <li>The first tuesday of every month <a href="http://nodebots.nyc">Nodebots NYC</a> as an event in New York City USA!</li>
   </ul>
 
   <h3>Past Events</h3>
