Fixed a typo in the copy of the homepage

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ Most meetups hold monthly events. Check their pages for details.
   </ul>
 
 <h2>See Awesome Nodebots</h2>
-<p>The <a href="projects.html">gallery</a> of nodebots exists to show off your creations. It comes to us from Johny-Five's <a href="https://github.com/rwldrn/johnny-five/blob/master/awesome.md">awesome.md</a>. When you creare something cool you should submit a pull adding it to both documents.</p>
+<p>The <a href="projects.html">gallery</a> of nodebots exists to show off your creations. It comes to us from Johny-Five's <a href="https://github.com/rwldrn/johnny-five/blob/master/awesome.md">awesome.md</a>. When you create something cool you should submit a pull adding it to both documents.</p>
 
 <h2 id="join">Join the Community</h2>
 <p>Want to hack on hardware? Build a robot? Become a Maker? Don't see an event near you yet? Come and join in with the community across the web:</p>
