First cut of better nodebots day representation.

--- a/conduct.html
+++ b/conduct.html
@@ -68,7 +68,7 @@ to the terms described in the NodeBots Dispute Resolution document.  There
 is never a good reason to be rude over package name disputes.</p>
 
 <p>Any spamming, trolling, flaming, baiting, or other attention-stealing
-behaviour is not welcome, and will not be tolerated.</p>
+behavior is not welcome, and will not be tolerated.</p>
 
 <p>Harassing other users of the Service is never tolerated, whether via
 public or private media.</p>
