--- a/index.html
+++ b/index.html
@@ -2,8 +2,23 @@
 title: NodeBots - The Rise of JS Robotics
 introTitle: Learn how to make robots powered by JavaScript
 ---
+
+<h1 class="events">International NodeBots Day</h1>
+<p>This year's event is on <strong>July 30th 2016</strong> <a href="https://github.com/nodebots/nodebotsday">Join us at an event near you!</a></p>
+<p>Each year our community around the world gather on a single day to learn and make together. We call this NodeBots Day!</p>
+
+<p>NodeBots Day is word wide event where people learn how to control the physical world with JavaScript. We want you to leave with the satisfaction of making something awesome! Each event has experts on hand to help you build your project and start you on the path to building awesome devices. Overall we're going to get together, collaborate and hack. The focus of NodeBots Day is on sharing and enjoying each other's company and JavaScript. Lots of JavaScript.</p>
+
 <p>
-  That's right... if you've any JavaScript experience, you can now use your powers to manipulate the machines.
+  <a href="https://github.com/nodebots/nodebotsday">Find out more about joining us NodeBots Day as a member or a leader on our Github Page.</a>
+</p>
+
+<p>Follow <a href="https://twitter.com/nodebots">@nodebots</a>, check the <a href="https://github.com/nodebots/nodebotsday">github</a>, or contact the <a href="/core.html">NodeBots team</a> for more info.</p>
+
+<h2>So what's a Nodebot?</h2>
+
+<p>
+  If you've any JavaScript experience, you can now use your powers to manipulate the machines.
   From <a title="Das Blinkenlight" href="http://instagram.com/p/cFVNtmJxlc/">blinking lights</a>
   to <a href="/sumo.html">Sumo Bot battles</a>,
   <a href="http://www.youtube.com/watch?v=6NYyGC-wZKU">Remote control cats</a>,
@@ -17,29 +32,15 @@ introTitle: Learn how to make robots powered by JavaScript
 <p>There are regular NodeBots events around the world where people meet-up to learn and hack together on Arduinos, Tessels, Edison's, Raspberry Pis, NodeCopters, robots, and any other gizmos that just need more input...</p>
 
 <p>If you have no idea how to use an LED, have no fear NodeBot experts will be on hand to help you hack, solder, and 3D print your way to a full fledged NodeBot.</p>
-<p>All you need is some basic javascript knowledge and desire to learn.</p>
+<p>All you need is some basic JavaScript knowledge and desire to learn.</p>
 
+<h1 class="events">Find a meetup near you</h1>
 
-<h2 id="events">International NodeBots Day</h2>
-<p>This year's event is on <strong>July 30th 2016</strong> <a href="https://github.com/nodebots/nodebotsday">Join us at an event near you!</a></p>
-<p>Each year our community around the world gather on a single day to learn and make together. We call this NodeBots Day!</p>
-
-<p>NodeBots Day is not a hackathon. There will be no prizes other than the satisfaction of making something awesome! Each event has experts on hand to help you build your project and start you on the path to building awesome devices. Overall we're going to get together, collaborate and hack. The focus of NodeBots Day is on sharing and enjoying each other's company and JavaScript. Lots of JavaScript.</p>
-
-<p>
-  <a href="https://github.com/nodebots/nodebotsday">Find out more about joining us NodeBots Day as a member or a leader on our Github Page.</a>
-</p>
-
-<p>Follow <a href="https://twitter.com/nodebotsday">@nodebotsday</a>, check the <a href="https://github.com/nodebots/nodebotsday">github</a>, or contact the <a href="/core.html">NodeBots team</a> for more info.</p>
-
-<h2>Find a meetup near you</h2>
-
-Most meetups hold monthly events. Check their pages for details.
+Around the world you can find a monthly Nodebots meetup event. They all follow the <a href="/conduct.html">Nodebots code of conduct</a> to maintain a safe environment for all to learn.
 
 </div> <!-- close .content, so make can use full width -->
 <div class="map" id="map"></div>
 <div class="content">
-
 <ul>
   <li>
     <a href="http://nodebots-sv.github.io/">NodeBots El Salvador</a> - El Salvador
@@ -93,7 +94,8 @@ Most meetups hold monthly events. Check their pages for details.
 
   <h3>Upcoming Events</h3>
   <ul>
-    <li>The first tuesday of every month <a href="http://nodebots.nyc">Nodebots NYC</a> as an event in New York City USA!</li>
+    <li>July 30th, 2016 is Nodebots day around the world</li>
+    <li>The first Tuesday of every month <a href="http://nodebots.nyc">Nodebots NYC</a> as an event in New York City USA!</li>
   </ul>
 
   <h3>Past Events</h3>
@@ -120,46 +122,23 @@ Most meetups hold monthly events. Check their pages for details.
 <p>Want to hack on hardware? Build a robot? Become a Maker? Don't see an event near you yet? Come and join in with the community across the web:</p>
 
 <ul>
-  <li>IRC Channel: <code>#nodebots</code></li>
   <li>Twitter Feed: <a href="https://twitter.com/nodebots">@nodebots</a></li>
-  <li>Forum: <a href="http://forums.nodebots.io/">forums.nodebots.io</a></li>
-  <li>Blog: <a href="http://blog.nodebots.io/">blog.nodebots.io</a></li>
-  <li>Subreddit: <a href="http://www.reddit.com/r/nodebots">reddit.com/r/nodebots</a> </li>
+  <li>Gitter Chat Room: <a href="https://gitter.im/nodebots/nodebots.io">gitter.im/nodebots/nodebots.io</a></li>
+  <li>Subreddit: <a href="http://www.reddit.com/r/nodebots">reddit.com/r/nodebots</a></li>
 </ul>
-
-<p>Also, make sure to be the first to find out about new events:
-</p>
-  <!-- Begin MailChimp Signup Form -->
-  <link href="http://cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
-  <style type="text/css">
-    #mc_embed_signup{ background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-    /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-       We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-  </style>
-  <div id="mc_embed_signup">
-    <form action="http://jsconf.us2.list-manage.com/subscribe/post?u=0ce5e6406b5d3c47046a3b385&amp;id=09c06ec4ef" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-      <label for="mce-EMAIL">Subscribe to our mailing list</label>
-      <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-      <div class="clear">
-        <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
-      </div>
-    </form>
-  </div>
-  <!--End MailChimp Signup Form-->
 
 <h2>Getting started</h2>
 <p>Install <a href="http://nodejs.org/">Node.js</a> and get the <a href="https://github.com/rwldrn/johnny-five">johnny-five</a> module.
   You need to have an Arduino programmed with Firmata, which is <a href="https://github.com/rwldrn/johnny-five#setup-and-assemble-arduino">pretty easy to setup</a>.
   Once that is complete, you can now start hacking hardware like a champion! NodeBots makes the process of programming hardware circuitry very similar to how one would program a modern web page. Seriously, it is that easy!
 </p>
-<script src="https://gist.github.com/voodootikigod/5374512.js"></script>
-<video controls>
-  <source src="http://dl.dropbox.com/u/3531958/led-strobe.mp4">
-  <source src="http://dl.dropbox.com/u/3531958/led-strobe.ogv">
-  <source src="http://dl.dropbox.com/u/3531958/led-strobe.webm">
-</video>
 
-<p></p>
+<script src="https://gist.github.com/reconbot/fb19742228aaf8c766d6bf2883a6fd3f.js"></script>
+
+<div class="embed-container">
+  <iframe src='https://www.youtube.com/embed/nOlUpNDtSkk' frameborder='0' allowfullscreen></iframe>
+</div>
+
 <p>Even if you don't have an Arduino you can still make a start via the <a href="https://www.npmjs.org/package/nodebot-workshop">nodebot-workshop</a> which will teach you the basics of johnny-five through a series of code challenges
   <a href="https://www.npmjs.org/package/nodebot-workshop"><img src="https://raw.githubusercontent.com/tableflip/nodebot-workshop/master/screenshot.png" alt=""/></a>
 </p>
@@ -179,66 +158,27 @@ Most meetups hold monthly events. Check their pages for details.
 <script>
   var map = L.map('map', {
     scrollWheelZoom: false
-  }).setView([25, 0], 2)
+  }).setView([25, 0], 2);
 
   L.tileLayer("http://{s}tile.stamen.com/toner/{z}/{x}/{y}.png", {
     "minZoom":      0,
     "maxZoom":      20,
     "subdomains":   ["", "a.", "b.", "c.", "d."],
     "scheme":       "xyz"
-  }).addTo(map)
+  }).addTo(map);
 
-  var meetups = [
-    //        lat     lng
-    {coords:[  47.499993, 8.750002], name: "NodeBots Switzerland", url: "http://www.nodebots.ch"},
-    {coords:[  13.9709564, -89.5748148], name: "NodeBots El Salvador, SV", url: "http://nodebots-sv.github.io/"},
-    {coords:[  51.49, -0.093], name: "NodeBots of London", url: "http://www.meetup.com/NodeBots-of-London"},
-    {coords:[  40.719767, -74.003885], name: "NodeBots NYC", url: "http://www.nodebots.nyc/"},
-    {coords:[  30.26, -97.74], name: "NodeBots Austin", url: "http://austinnodebots.com"},
-    {coords:[   6.23, -75.57], name: "NodeBots Medellín", url: "http://nodebotsmed.tumblr.com/"},
-    {coords:[ -33.92,  18.42], name: "NodeBots Cape Town", url: "https://twitter.com/nodebotscpt"},
-    {coords:[ -27.47, 153.02], name: "NodeBots Brisbane", url: "http://www.eventbrite.com.au/e/brisbanes-international-nodebots-day-tickets-12120977169"},
-    {coords:[  37.77,-122.41], name: "NodeBots SF", url: "http://www.meetup.com/nodebotssf"},
-    {coords:[  36.85, -76.28], name: "NodeBots Norfolk", url:"http://www.norfolkjs.org"},
-    {coords:[  29.76, -95.36], name: "NodeBots Houston, TX", url:"https://ti.to/houstonjs/nodebotsday"},
-    {coords:[  36.16,-115.13], name: "NodeBots Las Vegas, MV (Meowada)", url:"http://www.meetup.com/vegasjs"},
-    {coords:[  25.78, -80.20], name: "NodeBots Miami/Fort Lauderdale, FL", url:"http://www.meetup.com/NodeJS-Enthusiasts-SE-Florida/events/182676152"},
-    {coords:[  45.52,-122.67], name: "PDXNode, Portland, OR", url:"http://www.pdxnode.org/"},
-    {coords:[  33.44,-112.07], name: "NodeBots Phoenix/Mesa, AZ", url:""},
-    {coords:[  42.35, -71.05], name: "NodeBots Boston", url:"https://ti.to/bocoup/nodebotsday-2014"},
-    {coords:[  38.90, -77.03], name: "NodeBots DC", url:"https://ti.to/nodebots-dc/nodebots-day-2014"},
-    {coords:[  45.42, -75.69], name: "Ottawa.js, ON", url:"https://github.com/ottawajs/nodebots"},
-    {coords:[  15.78, -90.23], name: "NodeBots Guatemala, GT", url:"http://nodebotsgt.tumblr.com/"},
-    {coords:[   4.59, -74.07], name: "NodeBots Bogotá, CO", url:""},
-    {coords:[ -23.55, -46.63], name: "NodeBots São Paulo, SP", url:""},
-    {coords:[  19.24, -99.10], name: "NodeBots Distrito Federal, México", url:""},
-    {coords:[  48.85,   2.35], name: "Les NodeBots de Paris", url:"http://www.meetup.com/Nodebots-Paris"},
-    {coords:[ -37.81, 144.96], name: "NodeBots Melbourne, Australia", url:"http://www.eventbrite.com.au/e/nodebots-day-melbourne-july-2014-tickets-12121105553"},
-    {coords:[ -33.86, 151.20], name: "NodeBots Sydney, Australia", url:"https://ti.to/nbdau/nodebots-sydney-2014"},
-    {coords:[   4.15, -73.63], name: "NodeBots Villavicencio", url:"http://www.meetup.com/VillavicencioJS/"},
-    {coords:[ -34.82, -56.23], name: "NodeBots Montevideo", url:"https://ti.to/sophilabs/nodebots-25th-jul-2015/"},
-    {coords:[ -8.03, -34.87], name: "NodeBots Recife", url:"http://www.meetup.com/pt/NodeBotsRec"},
-    {coords:[ 32.84, -79.86], name: "NodeBots Charleston", url:"http://nodebotschs.github.io/"},
-    {coords:[-34.5992296, -58.3695231], name: "NodeBots Buenos Aires", url:"http://nodebots.github.io/buenosaires/"},
-    {coords:[-30.1088701, -51.1769046], name: "NodeBotsDay Porto Alegre", url:"http://encontros.matehackers.org/pt/projects/21-nodebotsday-porto-alegre"},
-    {coords:[-33.4425368, -70.62611879999997], name: "NodeBots Santiago", url:"https://welcu.com/noderscl/nodebotsinternationaldaychile"},
-    {coords:[11.2239691, -74.186581], name: "NodeBots UniMagdalena", url:"http://nodeschool.io/santamarta"},
-    {coords:[-41.2910392, 174.7749513], name: "NodeBots New Zealand", url:"http://www.nodebots.co.nz"}
+  var meetups = {{ site.data.meetups | jsonify }};
 
-  ]
-
-  meetups.map(function (m) {
-//    var marker = L.marker(m.coords)
+  meetups.forEach(function (m) {
     var marker = L.circleMarker(m.coords, {
       radius:12,
       weight:1,
       color: '#000',
       fillColor: '#F8E01E',
       fillOpacity: 0.8
-    })
-    var text = m.url ? '<a href="' + m.url + '">' + m.name + '</a>' : m.name
-    marker.bindPopup(text)
-    map.addLayer(marker)
-    return marker
-  })
+    });
+    var text = m.url ? '<a href="' + m.url + '">' + m.name + '</a>' : m.name;
+    marker.bindPopup(text);
+    map.addLayer(marker);
+  });
 </script>
