clarity in nodebot workshopper

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ introTitle: Learn how to make robots powered by JavaScript
       <h3>Getting Started</h3>
 
       <p>Install <a href="http://nodejs.org/">Node.js</a> and get the <a href="https://github.com/rwldrn/johnny-five">johnny-five</a> module.
-        You need to have an Arduino programmed with Firmata, which is <a href="https://github.com/rwldrn/johnny-five#setup-and-assemble-arduino">pretty easy to setup</a>.
+        You need to have an Arduino programmed with StandardFirmata, which is <a href="https://github.com/rwldrn/johnny-five#setup-and-assemble-arduino">pretty easy to setup</a>.
         Once that is complete, you can now start hacking hardware like a champion! NodeBots makes the process of programming hardware circuitry very similar to how one would program a modern web page. Seriously, it is that easy!
       </p>
 
@@ -146,7 +146,7 @@ introTitle: Learn how to make robots powered by JavaScript
         <iframe src='https://www.youtube.com/embed/nOlUpNDtSkk' frameborder='0' allowfullscreen></iframe>
       </div>
 
-      <p>Even if you don't have an Arduino you can still make a start via the <a href="https://www.npmjs.org/package/nodebot-workshop">nodebot-workshop</a> which will teach you the basics of johnny-five through a series of code challenges
+      <p>Even if you don't have any hardware you can still start learning with the <a href="https://www.npmjs.org/package/nodebot-workshop">nodebot-workshop</a> program which will teach you the basics of johnny-five through a series of code challenges.
         <a href="https://www.npmjs.org/package/nodebot-workshop"><img src="https://raw.githubusercontent.com/tableflip/nodebot-workshop/master/screenshot.png" alt=""/></a>
       </p>
     </div>
