A little bit of clarity in the software section

--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@ introTitle: Learn how to make robots powered by JavaScript
         </div>
       </div>
 
-      <h3>Getting Started</h3>
+      <h3>Nodebots Software</h3>
 
-      <p>Install <a href="http://nodejs.org/">Node.js</a> and get the <a href="https://github.com/rwldrn/johnny-five">johnny-five</a> module.
-        You need to have an Arduino programmed with StandardFirmata, which is <a href="https://github.com/rwldrn/johnny-five#setup-and-assemble-arduino">pretty easy to setup</a>.
+      <p>Install <a href="http://nodejs.org/">Node.js</a> and get the <a href="https://github.com/rwldrn/johnny-five">Johnny-Five</a> library.
+        If you're controlling an arduino, you'll need to have it programmed with StandardFirmata, which is <a href="https://github.com/rwldrn/johnny-five#setup-and-assemble-arduino">pretty easy to setup</a>. If you're using a single board computer (like the Tessel 2, Raspberry Pi or Intel Edison) it will have all your IO built in and you'll need to grab the <a href="http://johnny-five.io/platform-support/">IO-Plugin</a> for your platform.
         Once that is complete, you can now start hacking hardware like a champion! NodeBots makes the process of programming hardware circuitry very similar to how one would program a modern web page. Seriously, it is that easy!
       </p>
 
