Change nodebots day Los Angeles homepage link

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ introTitle: Learn how to make robots powered by JavaScript
           <li><a href="http://gemcityjs.com/nodebots/">Dayton, OH, USA</a></li>
           <li><a href="http://www.meetup.com/Hackster-DFW/events/232082488/">Dallas, Texas, USA</a></li>
           <li><a href="https://nodejshouston.github.io/bots/">Houston, Texas, USA</a></li>
-          <li><a href="https://github.com/nodebots/nodebotsday/tree/master/2016/la">Los Angeles, California, USA</a></li>
+          <li><a href="http://nodebotsday.caa.com/">Los Angeles, California, USA</a></li>
           <li><a href="https://github.com/nodebots/nodebotsday/tree/master/2016/nyc">New York City, USA</a></li>
           <li><a href="http://www.meetup.com/NorfolkJS/events/228925845/">Norfolk, Virginia, USA</a></li>
           <li><a href="https://ti.to/monteslu/nodebots-day-phx-2016">Phoenix/Mesa, Arizona, USA</a></li>
