--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@ introTitle: Learn how to make robots powered by JavaScript
         <h4>North America</h4>
         <ul>
           <li><a href="https://github.com/nodebots/nodebotsday/tree/master/2016/boston">Boston, Massachusetts, USA</a></li>
+          <li><a href="https://www.eventbrite.com/e/international-nodebots-day-chicago-tickets-25845975007?aff=es2
+">Chicago, IL, USA</a></li>
           <li><a href="http://gemcityjs.com/nodebots/">Dayton, OH, USA</a></li>
           <li><a href="http://www.meetup.com/Hackster-DFW/events/232082488/">Dallas, Texas, USA</a></li>
           <li><a href="https://nodejshouston.github.io/bots/">Houston, Texas, USA</a></li>
