--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ introTitle: Learn how to make robots powered by JavaScript
       <div class="col-50">
         <h4>North America</h4>
         <ul>
-          <li><a href="https://github.com/nodebots/nodebotsday/tree/master/2016/boston">Boston, Massachusetts, USA</a></li>
+          <li><a href="http://nodebotschs.github.io/">Charleston, South Carolina, USA</a></li>
           <li><a href="https://www.eventbrite.com/e/international-nodebots-day-chicago-tickets-25845975007?aff=es2
 ">Chicago, IL, USA</a></li>
           <li><a href="http://gemcityjs.com/nodebots/">Dayton, OH, USA</a></li>
