--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ introTitle: Learn how to make robots powered by JavaScript
       <p>This year's event is on <strong>July 30th 2016</strong> <a href="https://github.com/nodebots/nodebotsday">Join us at an event near you!</a></p>
       <p>Each year our community around the world gather on a single day to learn and make together. We call this NodeBots Day!</p>
 
-      <p>NodeBots Day is word wide event where people learn how to control the physical world with JavaScript. We want you to leave with the satisfaction of making something awesome! Each event has experts on hand to help you build your project and start you on the path to building awesome devices. Overall we're going to get together, collaborate and hack. The focus of NodeBots Day is on sharing and enjoying each other's company and JavaScript. Lots of JavaScript.</p>
+      <p>NodeBots Day is world wide event where people learn how to control the physical world with JavaScript. We want you to leave with the satisfaction of making something awesome! Each event has experts on hand to help you build your project and start you on the path to building awesome devices. Overall we're going to get together, collaborate and hack. The focus of NodeBots Day is on sharing and enjoying each other's company and JavaScript. Lots of JavaScript.</p>
 
       <p>
         <a href="https://github.com/nodebots/nodebotsday">Find out more about joining us NodeBots Day as a member or a leader on our Github Page.</a>
