Add Miami to event list

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@ introTitle: Learn how to make robots powered by JavaScript
           <li><a href="http://www.meetup.com/Hackster-DFW/events/232082488/">Dallas, Texas, USA</a></li>
           <li><a href="https://nodejshouston.github.io/bots/">Houston, Texas, USA</a></li>
           <li><a href="http://nodebotsday.caa.com/">Los Angeles, California, USA</a></li>
+          <li><a href="http://www.meetup.com/MiamiJS/events/232549993/">Miami, FL, USA</a></li>
           <li><a href="https://ti.to/bocoup/nodebots-day-nyc-2016">New York City, USA</a></li>
           <li><a href="http://www.meetup.com/NorfolkJS/events/228925845/">Norfolk, Virginia, USA</a></li>
           <li><a href="https://ti.to/monteslu/nodebots-day-phx-2016">Phoenix/Mesa, Arizona, USA</a></li>
