--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@ introTitle: Learn how to make robots powered by JavaScript
           <li><a href="https://ti.to/monteslu/nodebots-day-phx-2016">Phoenix/Mesa, Arizona, USA</a></li>
           <li><a href="https://ti.to/techramento/nodebots-day-by-sacjs">Sacramento, California, USA</a></li>
           <li><a href="http://www.seattlecoderdojo.com/">Seattle, Washington, USA</a></li>
+          <li><a href="http://www.meetup.com/es-ES/NodeBotsMX/events/232572631/">Mexico City, Mexico</a></li>
         </ul>
 
         <h4>Central America</h4>
