Adding Mexico City

--- a/index.html
+++ b/index.html
@@ -210,6 +210,9 @@ introTitle: Learn how to make robots powered by JavaScript
         <li>
           <a href="http://nodebots.vegas">NodeBots Vegas</a> - USA
         </li>
+         <li>
+          <a href="http://www.meetup.com/NodeBotsMX/">NodeBots Mexico City</a> - Mexico
+        </li>
         <li>
           or <a href="#join">start your own!</a>
         </li>
