Add Washington DC to event list and meetups.json

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@ introTitle: Learn how to make robots powered by JavaScript
           <li><a href="https://ti.to/techramento/nodebots-day-by-sacjs">Sacramento, California, USA</a></li>
           <li><a href="http://www.seattlecoderdojo.com/">Seattle, Washington, USA</a></li>
           <li><a href="http://www.meetup.com/es-ES/NodeBotsMX/events/232572631/">Mexico City, Mexico</a></li>
+          <li><a href="https://nodedc.github.io/bots/">Washington DC, USA</a></li>
         </ul>
 
         <h4>Central America</h4>
@@ -212,6 +213,9 @@ introTitle: Learn how to make robots powered by JavaScript
         </li>
          <li>
           <a href="http://www.meetup.com/NodeBotsMX/">NodeBots Mexico City</a> - Mexico
+        </li>
+         <li>
+          <a href="https://nodedc.github.io/bots/">NodeBots Washington DC</a> - USA
         </li>
         <li>
           or <a href="#join">start your own!</a>
