--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@ introTitle: Learn how to make robots powered by JavaScript
       <div class="col-50">
         <h4>North America</h4>
         <ul>
+          <li><a href="http://www.meetup.com/Anchorage-Makers/events/232963512/">Anchorage, Alaska, USA</a></li>
           <li><a href="http://nodebotschs.github.io/">Charleston, South Carolina, USA</a></li>
           <li><a href="https://www.eventbrite.com/e/international-nodebots-day-chicago-tickets-25845975007?aff=es2
 ">Chicago, IL, USA</a></li>
@@ -82,7 +83,7 @@ introTitle: Learn how to make robots powered by JavaScript
       <div class="col-50">
         <h4>Africa</h4>
         <ul>
-          <li><a href="https://github.com/nodebots/nodebotsday/tree/master/2016/_template">Be the first this year!</a></li>
+          <li><a href="http://www.meetup.com/Hackster-Abuja/">Abuja, Nigeria</a></li>
         </ul>
 
         <h4>Antarctica</h4>
