Add Medellín, Colombia

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@ introTitle: Learn how to make robots powered by JavaScript
 
         <h4>South America</h4>
         <ul>
+          <li><a href="https://www.meetup.com/MedellinJS/events/232970122/">Medellín, Colombia</a></li>
           <li><a href="https://encontros.matehackers.org/pt/projects/41-nodebotsday-porto-alegre">Porto Alegre, Brasil</a></li>
         </ul>
       </div>
