--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@ introTitle: Learn how to make robots powered by JavaScript
         <h4>Africa</h4>
         <ul>
           <li><a href="http://www.meetup.com/Hackster-Abuja/">Abuja, Nigeria</a></li>
+          <li><a href="https://www.facebook.com/nextronic.ma/">Casablanca, Morocco</a></li>
         </ul>
 
         <h4>Antarctica</h4>
