--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ introTitle: Learn how to make robots powered by JavaScript
         <ul>
           <li><a href="http://nodebotsau.io/">Melbourne, Australia</a></li>
           <li><a href="http://nodebotsau.io/">Brisbane, Australia</a></li>
-          <li><a href="https://github.com/nodebotsau/nbdau/issues/48">Sydney, Australia</a> (soon)</li>
+          <li><a href="https://ti.to/nbdau/nodebots-syd-2016">Sydney, Australia</a></li>
         </ul>
 
         <h4>Europe</h4>
