--- a/index.html
+++ b/index.html
@@ -139,6 +139,9 @@ introTitle: Learn how to make robots powered by JavaScript
           <a href="https://github.com/SkyImpel/NodeBotsPK">NodeBots PK</a> - Pakistan
         </li>
         <li>
+          <a href="https://github.com/nodebotsindia">NodeBots India</a> - India
+        </li>
+        <li>
           or <a href="https://github.com/nodebots/nodebots.io/issues/new">start your own!</a>
         </li>
       </ul>
